--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ width:80px;
         I will do Data Science Masters at Columbia University in September 2021. I graduated from Columbia University, Columbia College in May 2021 with majors in Statistics and Applied Mathematics. My academic interest lies in the general area of probabilistic Machine Learning. They include the intersection between Deep Learning and probabilistic modeling, and approximate Bayesian inference. I am also interested in model combination methods.
         </p>
         <p>
-        I am curious about properties behind model predictions, including uncertainty representation and robustness. I am working on addressing these questions through probabilistic modeling, improving inference methods, and exploring their applications.
+        I am fortuante to be advised by professor <a href="http://www.cs.columbia.edu/~blei/">David M. Blei</a> during Masters, and by professor <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a> and professor <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a> during Undergrad. I am curious about properties behind model predictions, including uncertainty representation and robustness. I am working on addressing these questions through probabilistic modeling, improving inference methods, and exploring their applications.
         </p>
         </td> 
         </tr>
