--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ width:80px;
         <p>
         <papertitle>Model Stacking in Bayesian Phylogenetic Inference</papertitle>
         <br>
-        <em>Columbia Statistics - Undergraduate Research Internship with </em><a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a><br>
+        <em>Columbia Statistics - Undergraduate Summer Research Internship with </em><a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a><br>
         </p>
         <p>We develop stacking algorithm for phylogenetic inference by isolating discrete models, using MCMC-based methods in Stan for sampling on continuous parameters, and adopting stacking for model combination. Preliminary results support the hypothesis that stacking tends less to produce spuriously high model posteriors than Bayesian Model Averaging.</p>
       </td>
