--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ width:80px;
         <p>
           <a href="https://github.com/zhang-liyi"> GitHub</a> | 
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn</a> | 
-          <a> Email:</a>  lz2574@columbia.edu 
+          <a> Email:</a>  zhang.liyi@columbia.edu 
         </p>
         </td>
        </tr>
