--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@ table {
 li{
   margin: 10px 0;
 }
-name {
+title {
     font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
     font-size: 47px;
+    font-weight: bold;
+}
+subtitle {
+    font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
+    font-size: 21px;
     font-weight: bold;
 }
 heading {
@@ -90,7 +95,10 @@ width:80px;
       <tr>
         <td>
         <p>
-          <name>Liyi Zhang</name>
+          <title>Liyi Zhang</title>
+        </p>
+        <p>
+          <subtitle>M.S. in Data Science at Columbia University</subtitle>
         </p>
         <p>
         <img src="zhang-liyi.jpg" width="30%">
