--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ subtitle {
     font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
     font-size: 21px;
     font-weight: bold;
+    color: #606060;
 }
 heading {
     font-family:  "Trebuchet MS", Verdana, Helvetica, sans-serif;
