--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ table {
 li{
   margin: 10px 0;
 }
-title {
+name {
     font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
     font-size: 47px;
     font-weight: bold;
@@ -96,7 +96,7 @@ width:80px;
       <tr>
         <td>
         <p>
-          <title>Liyi Zhang</title>
+          <name>Liyi Zhang</name>
         </p>
         <p>
           <subtitle>M.S. in Data Science at Columbia University</subtitle>
