--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ html {
   background-image: ; /* url("fib.jpg") #ffc38b;*/
 }
 a {
-  color: #240FDF;
+  color: #000099;
 }
 a:visited {
-  color: #240FDF;
+  color: #000099;
 }
 a:hover {
   color: #ECCF11;
