--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@ a:hover {
 p {
   font-family: "Trebuchet MS", Verdana, Helvetica, sans-serif;
 }
+p_ {
+  font-family: "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
+}
 blockquote {
     display: block;
     margin-top: 1em;
@@ -105,9 +108,11 @@ width:80px;
         <img src="zhang-liyi.jpg" width="30%">
         </p>
         <p>
+          <p_>
           <a href="https://github.com/zhang-liyi"> GitHub</a> | 
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn</a> | 
           <a> Email:</a>  zhang.liyi@columbia.edu 
+          </p_>
         </p>
         </td>
        </tr>
