--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ width:80px;
       </table>
       
       <br>
+      <br>
       
       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tr>
@@ -154,7 +155,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/vcsmc.png' width="280" height="230">
+        <img src='Images/vcsmc.png'>
       </td>
       <td valign="top" width="75%">
         <p>
