--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/vcsmc.png'>
+        <img src='Images/vcsmc.png' width="25%">
       </td>
       <td valign="top" width="75%">
         <p>
