--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/stack-ternary.png' width="280" height="250">
+        <img src='Images/stack-ternary.png' width="100%">
       </td>
       <td valign="top" width="75%">
         <p>
@@ -238,7 +238,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/bnn-chart.png' width="280" height="270">
+        <img src='Images/bnn-chart.png' width="100%">
       </td>
       <td valign="top" width="75%">
         <p>
@@ -255,7 +255,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/svrg.png' width="280" height="250">
+        <img src='Images/svrg.png' width="100%">
       </td>
       <td valign="top" width="75%">
         <p>
@@ -274,7 +274,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/pso.png' width="280" height="250">
+        <img src='Images/pso.png' width="100%">
       </td>
       <td valign="top" width="75%">
         <p>
