--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ width:80px;
           <a href="http://www.cs.columbia.edu/~blei/">David M. Blei</a>,
           <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a>,
         <br>
-        To appear in <em>Uncertainty in Artificial Intelligence 2021 (UAI). </em><a href="https://github.com/amoretti86/phylo">Code.</a><br>
+        <em>Uncertainty in Artificial Intelligence 2021 (UAI). </em><a href="https://github.com/amoretti86/phylo">Code.</a><br>
         </p>
         <p>Bayesian phylogenetic inference is often conducted via local or sequential search over topologies and branch lengths using algorithms such as random-walk Markov chain Monte Carlo (MCMC) or Combinatorial Sequential Monte Carlo (CSMC). However, when MCMC is used for evolutionary parameter learning, convergence requires long runs with inefficient exploration of the state space. We introduce Variational Combinatorial Sequential Monte Carlo (VCSMC), a powerful framework that establishes variational sequential search to learn distributions over intricate combinatorial structures. We then develop nested CSMC, an efficient proposal distribution for CSMC and prove that nested CSMC is an exact approximation to the (intractable) locally optimal proposal. We use nested CSMC to define a second objective, VNCSMC which yields tighter lower bounds than VCSMC. We show that VCSMC and VNCSMC are computationally efficient and explore higher probability spaces than existing methods on a range of tasks.
     </td>
