--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ width:80px;
           <a href=http://www.cs.columbia.edu/~amoretti/>Antonio K. Moretti*</a>,
           <strong>Liyi Zhang*</strong>,
           <a href=https://naesseth.github.io/>Christian A. Naesseth</a>,
-          Hadiah Venner,
+          <a href=https://www.linkedin.com/in/hadiah-venner/>Hadiah Venner</a>,
           <a href="http://www.cs.columbia.edu/~blei/">David M. Blei</a>,
           <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a>,
         <br>
