--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ width:80px;
           <p_>
           <a href="https://github.com/zhang-liyi"> GitHub</a> | 
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn</a> | 
+          <a href="Zhang_Liyi_Resume.pdf"> Resume</a> | 
           <a> Email:</a>  zhang.liyi@columbia.edu 
           </p_>
         </p>
@@ -134,7 +135,7 @@ width:80px;
         <tr>
         <td width="100%" valign="middle">
         <p>
-        I will do Data Science Masters at Columbia University in September 2021. I graduated from Columbia University, Columbia College in May 2021 with majors in Statistics and Applied Mathematics. I am fortuante to be advised by professor <a href="http://www.cs.columbia.edu/~blei/">David Blei</a> during Masters, and by professor <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a> and professor <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a> during Undergrad. My academic interest lies in the intersection between probabilistic modeling and deep learning. I am curious about generative modeling and properties behind model predictions, including uncertainty representation and robustness. I am working on these problems through probabilistic modeling, improving inference methods, and exploring their applications.
+        I will do Data Science Masters at Columbia University in September 2021. I graduated from Columbia University, Columbia College in May 2021 with majors in Statistics and Applied Mathematics. I am fortuante to be advised by professor <a href="http://www.cs.columbia.edu/~blei/">David Blei</a> during Masters, and by professor <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a> and professor <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a> during Undergrad. My academic interest lies in the intersection between probabilistic modeling and deep learning. I am curious about generative modeling and properties behind model predictions, including uncertainty representation, interpretability, and robustness. I am working on these problems through probabilistic modeling, improving inference methods, and exploring their applications.
         </p>
         </td> 
         </tr>
