--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ width:80px;
           <strong>Liyi Zhang</strong>,
           <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a>,
         <br>
-        Machine Learning in Computational Biology 2020 (MLCB). </em><a href="https://github.com/amoretti86/phylo">Code.</a><br>
+        <em>Machine Learning in Computational Biology 2020 (MLCB). </em><a href="https://github.com/amoretti86/phylo">Code.</a><br>
         </p>
     </td>
     </tr>
@@ -228,7 +228,7 @@ width:80px;
       <td valign="top" width="75%">
         <p>
         <papertitle>Hamiltonian Score Climbing: Variational Inference using Inclusive KL and Neural Transport</papertitle><br>
-        Ongoing research project advised by <a href="http://www.cs.columbia.edu/~blei/">David Blei</a>. Work under submission.<br>
+         <em>Ongoing research project advised by </em><a href="http://www.cs.columbia.edu/~blei/">David Blei</a>. <em>Work under submission.</em><br>
         </p>
         <p>Variational inference often minimizes the “exclusive Kullbeck-Leibler (KL)” KL(q||p) from the approximate distribution q to the posterior p. Recent work studies the “inclusive KL” KL(p||q), which unlike exclusive KL does not underestimate uncertainty. This paper introduces Hamiltonian Score Climbing (HSC), a method that optimizes KL(p||q) using Hamiltonian Monte Carlo (HMC) and transport maps. The transport map improves the trajectory of HMC sampling by acting as a change of variable between the latent variable space and a warped space. HSC uses HMC samples to dynamically train a transport map while optimizing KL(p||q). HSC leverages synergies, where better transport maps leads to better HMC sampling, which then leads to better transport maps. We demonstrate its utility on synthetic and real data. Among the studies, we find that HSC achieves competitive performance when training variational autoencoders on large-scale data. </p>
       </td>
