--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
         <td width="100%" valign="middle">
-          <heading>Highlighted Publication</heading>
+          <heading>Publications</heading>
         </td>
       </tr> 
     </table>
