--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ width:80px;
           <p_>
           <a href="https://github.com/zhang-liyi"> GitHub</a> | 
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn</a> | 
+          <a href="Zhang_Liyi_Resume.pdf"> Resume</a> | 
           <a> Email:</a>  zhang.liyi@columbia.edu 
           </p_>
         </p>
