--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ width:80px;
       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tr>
           <td width="100%" valign="middle">
-            <heading>Background and Research Interest</heading>
+            <heading>Background and Research Interests</heading>
           </td>
         </tr> 
       </table>
@@ -152,6 +152,7 @@ width:80px;
         </td>
       </tr> 
     </table>
+      
     <br>
 
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
@@ -190,6 +191,9 @@ width:80px;
     </td>
     </tr>
     </table>
+
+<br>
+<br>
 
   <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
       <tr>
