--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<meta name="google-site-verification" content="5XZwYIvqm1A6qR1WOXZFwXynmIvynWzV70s0sRD3yKg" />
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,6 +110,7 @@ width:80px;
         <p>
           <p_>
           <a href="https://github.com/zhang-liyi"> GitHub</a> | 
+          <a href="https://twitter.com/LiyiZhang_Leo"> Twitter</a> | 
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn</a> | 
           <a> Email:</a>  zhang.liyi@columbia.edu 
           </p_>
