--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="5XZwYIvqm1A6qR1WOXZFwXynmIvynWzV70s0sRD3yKg" />
   
 <style type="text/css">
 * {
