--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ width:80px;
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tr>
         <td width="100%" valign="middle">
-        <p>I am doing data science masters at Columbia University, expecting to graduate in May 2022. I majored in statistics and applied mathematics at Columbia College, Columbia University, where I graduated in May 2021. I am advised by professor <a href="http://www.cs.columbia.edu/~blei/">David Blei</a> during masters, and by professor <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a> and professor <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a> during undergrad.</p>
+        <p>I am an incoming Computer Science PhD at Princeton University, and did M.S. in Data Science and B.A. with Statistics and Applied Math majors at Columbia University. I am advised by professor <a href="http://www.cs.columbia.edu/~blei/">David Blei</a> during masters, and by professor <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a> and professor <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a> during undergrad.</p>
           <p>I am interested in <b>artificial intelligence</b>, with a focus on <b>probabilistic methods</b> and <b>deep generative models</b>. I aim to bring AI closer to humans – having human-like behaviors or becoming more interpretable. Although deep learning offers expressivity, its reasoning process is inadequately understood. Meanwhile, probabilistic modeling complements this weakness and has become fast and scalable. I work on combining these two areas in order to create expressive models with reliable uncertainty estimation, robustness, and a level of interpretability.</p>
         
         </td> 
