--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ a:hover {
   color: #ECCF11;
 }
 p {
-  font-family: "Garamond", Verdana, Helvetica, sans-serif;
+  font-family: "Cambria", Verdana, Helvetica, sans-serif;
 }
 p_ {
   font-family: "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
@@ -56,12 +56,12 @@ subtitle {
     color: #606060;
 }
 heading {
-    font-family:  "Garamond", Verdana, Helvetica, sans-serif;
+    font-family:  "Cambria", Verdana, Helvetica, sans-serif;
     font-size: 21px;
     font-weight: bold;
 }
 papertitle {
-    font-family:  "Garamond", Verdana, Helvetica, sans-serif;
+    font-family:  "Cambria", Verdana, Helvetica, sans-serif;
     font-size: 18px;
     font-weight: bold;
     }
