--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ width:80px;
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tr>
         <td width="100%" valign="middle">
-        <p>I am an incoming Computer Science PhD at Princeton University, where I am adviced by professor <a href="https://cocosci.princeton.edu/tom/index.php">Tom Griffiths</a>. I graduated from Columbia University with M.S. in Data Science and B.A. with Statistics and Applied Math majors. I was advised by professor <a href="http://www.cs.columbia.edu/~blei/">David Blei</a> during masters, and by professor <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a> and professor <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a> during undergrad.</p>
+        <p>I am doing a Computer Science PhD at Princeton University, where I am adviced by professor <a href="https://cocosci.princeton.edu/tom/index.php">Tom Griffiths</a>. I graduated from Columbia University with M.S. in Data Science and B.A. with Statistics and Applied Math majors. I was advised by professor <a href="http://www.cs.columbia.edu/~blei/">David Blei</a> during masters, and by professor <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a> and professor <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a> during undergrad.</p>
           <p>I am interested in <b>artificial intelligence</b>, with a focus on <b>probabilistic methods</b> and <b>deep generative models</b>. I aim to combine probability with deep learning to better utilize human knowledge in complex models.</p>
         
         </td> 
