--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ width:80px;
           <a href="https://github.com/zhang-liyi"> GitHub</a> | 
           <a href="https://twitter.com/LiyiZhang_Leo"> Twitter</a> | 
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn</a> | 
-          <a> Email:</a>  zhang.liyi@columbia.edu 
+          <a> Email:</a>  zhang.liyi@princeton.edu 
           </p_>
         </p>
         </td>
