--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ width:80px;
         <tr>
         <td width="100%" valign="middle">
         <p>I am doing a Computer Science PhD at Princeton University, where I am adviced by professor <a href="https://cocosci.princeton.edu/tom/index.php">Tom Griffiths</a>. I graduated from Columbia University with M.S. in Data Science and B.A. with Statistics and Applied Math majors. I was advised by professor <a href="http://www.cs.columbia.edu/~blei/">David Blei</a> during masters, and by professor <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a> and professor <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a> during undergrad.</p>
-          <p>I am interested in <b>artificial intelligence</b>, with a focus on <b>probabilistic methods</b> and <b>deep generative models</b>. I aim to combine probability with deep learning to better utilize human knowledge in complex models.</p>
+          <p>I use Bayesian statistics to explain both human thinking and deep learning models. I focus on using probabilistic models to distill knowledge from and instill knowledge to deep learning models, and developing scalable and effective approximate inference methods for probabilistic models.</p>
         
         </td> 
         </tr>
