--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ width:80px;
         <td width="100%" valign="middle">
         <p>I am a Computer Science PhD Candidate at Princeton University, where I am adviced by professor <a href="https://cocosci.princeton.edu/tom/index.php">Tom Griffiths</a>. I graduated from Columbia University with M.S. in Data Science and B.A. with Statistics and Applied Math majors. I was advised by professor <a href="http://www.cs.columbia.edu/~blei/">David Blei</a> during masters, and by professor <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a> and professor <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a> during undergrad.</p>
         <p>I work on Bayesian Deep Learning with applications to Large Language Models. I use probabilistic models to understand and to distill knowledge into deep learning models, and develop scalable and effective approximate inference methods for probabilistic models.</p>
-        <p>My works can be found on <a href="https://scholar.google.com/citations?user=1JK12SoAAAAJ&hl=en">Google Scholar</a> </p>
+        <p>My works can be found on <a href="https://scholar.google.com/citations?user=1JK12SoAAAAJ&hl=en">Google Scholar</a> </p>.
           
         </td> 
         </tr>
